# adsagents

./: README.md  ads.json  ads.md  ads_data.md  fb_ads.csv  fb_ads_demos.csv  fb_ads_regions.csv  pyproject.toml  strategy.md
src/adsagents/: crew.py  main.py
src/adsagents/config/: agents.yaml  tasks.yaml
src/adsagents/tools/: custom_tool.py
